<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.sticker.StickerActivity">

    <FrameLayout
        android:id="@+id/banner_adview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout">

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_6sdp"
            android:padding="@dimen/_3sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sticker_maker"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgBack"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/_6sdp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@+id/stickerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_adview">

        <com.example.stickers.Activities.sticker.lib.StickerView
            android:id="@+id/stickerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:bringToFrontCurrentSticker="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showBorder="true"
            app:showIcons="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgFrame"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/image"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgBg"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.example.stickers.Activities.sticker.lib.StickerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stickerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLeft"
            style="@style/imgStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerSticker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recyclerSticker"
            app:srcCompat="@drawable/ic_arrow_left" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgRight"
            style="@style/imgStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerSticker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recyclerSticker"
            app:srcCompat="@drawable/ic_arrow_right" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSticker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:layoutAnimation="@anim/layout_animation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgRight"
            app:layout_constraintStart_toEndOf="@+id/imgLeft"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            app:constraint_referenced_ids="imgEmoji,imgBase"
            app:flow_horizontalAlign="center"
            app:flow_horizontalBias="0"
            app:flow_horizontalGap="@dimen/_8sdp"
            app:flow_maxElementsWrap="2"
            app:flow_verticalBias="0"
            app:flow_verticalGap="@dimen/_8sdp"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/imgEmoji"
            style="@style/imgTxtStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_emoji"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/emoji"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12sdp"
            app:drawableTint="@color/grey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/imgBase"
            style="@style/imgTxtStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_sticker"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/base"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12sdp"
            app:drawableTint="@color/grey" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>